statistics added (get method)
